/*
 * $Id: ChangeLog,v 1.535 2008-09-01 02:51:29 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-08-31 21:49 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_image.c
    * Fixed scaled image.
    * Fixed image size from IPicture.

2008-08-31 15:37 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_datepicker.ch
  * source/h_datepicker.prg
    + DISABLED, NOBORDER and SUBCLASS clauses added to
      DATEPICKER and TIMEPICKER controls.
  - source/c_datepicker.c
  * source/common_make.bat
  * source/h_datepicker.prg
  + source/h_form.prg
  * source/h_windows.prg
  * source/makelib_bcc.bat
  * source/makelib_mingw.bat
    * Moved C code from c_datepicker.c to h_datepicker.prg file.
    - c_datepicker.c removed.
    + Form-specific code moved from h_windows.prg to h_form.prg
      (there's still some to code must be moved to).
  * source/h_tab.prg
    * TAB control is focused when focused control is on the
      hidden page. Reported by RIT.

2008-08-24 14:27 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_textbox.prg
    ! Fixed value assignation for text longer than picture mask.
    ! Fixed keystroke when cursor is at the end of string.
  * source/h_windows.prg
    ! Moved some hotkey processing to ::DoEvents().

2008-08-21 14:57 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_init.prg
     added gtgui default in order to hide console window. Another harbour compilation mode will be used

2008-07-24 20:38 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * include/i_browse.ch
     * removed @ nil,nil Browse  is not necesary

2008-07-24 18:33 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_init.prg
     added rdd default for harbour to avoid problems for final users.
  * source/h_report.prg
  * include/i_report.ch