@@ -1,5 +1,5 @@
 /*
- * $Id: h_windows.prg,v 1.194 2008-08-31 20:40:53 guerra000 Exp $
+ * $Id: h_windows.prg,v 1.195 2008-09-02 04:48:51 guerra000 Exp $
  */
 /*
  * ooHG source code:
@@ -1061,16 +1061,6 @@ Local nPos
 
    EndIf
 Return uParent
-
-#ifndef __XHARBOUR__
-STATIC FUNCTION RASCAN( aSource, bCode )
-LOCAL nPos
-   nPos := LEN( aSource )
-   DO WHILE nPos > 0 .AND. ! EVAL( bCode, aSource[ nPos ], nPos )
-      nPos--
-   ENDDO
-RETURN nPos
-#endif
 
 *-----------------------------------------------------------------------------*
 METHOD ParentDefaults( cFontName, nFontSize, uFontColor ) CLASS TWindow
