@@ -1,11 +1,18 @@
 /*
- * $Id: ChangeLog,v 1.535 2008-09-01 02:51:29 guerra000 Exp $
+ * $Id: ChangeLog,v 1.536 2008-09-02 04:48:51 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2008-09-01 23:47 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
+  * source/h_form.prg
+  * source/h_windows.prg
+    * Moved RASCAN() function to h_from.prg
+  * source/c_image.c
+    + _OOHG_RotateImage() function added.
 
 2008-08-31 21:49 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
   * source/c_image.c
